--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,10 +1,10 @@
 # Site Settings
-title: 'Scotch Jekyll Bootstrap'
-description: 'An Open-Source Bootstrap 3 Jekyll Theme by Scotch'
-url: 'https://salesucation.github.io' # the base hostname & protocol for your site
-footer_text: 'This text is footer text. Footer text goes here.'
+title: 'Rich Hildred'
+description: 'My Portfolio Site'
+url: 'https://rhildred.github.io' # the base hostname & protocol for your site
+footer_text: '&copy; Rich Hildred'
 
 # Admin Settings
-admin_name: 'Nicholas Cerminara'
-admin_email: 'nick@scotch.io'
+admin_name: 'Rich Hildred'
+admin_email: 'rhildred@conestogac.on.ca'
 
